scss/_modal.scss
@import "config";
@import "utilities";

.modal {
  position: fixed;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  transition: 0.5s ease-in-out;
  background: $dark-color;
  border: 2px solid $light-color;
  z-index: 10000;
  width: 600px;
  max-width: 75%;

  &.active {
    transform: translate(-50%, -50%) scale(1);
  }

  .modal-header {
    display: flex;
    flex-direction: row;
    justify-content: space-between;
    margin: 0.8rem;
    color: $light-color;
    font-weight: 600;
    font-size: 2rem;

    a {
      font-size: 1.5rem;
      color: $light-color;
    }
  }

  .form-fields {
    display: grid;
    grid-template-columns: 1fr;

    input {
      color: $light-color;
      font-family: "Raleway", sans-serif;
      font-weight: 600;
      margin: 0.8rem 1rem;
      height: 2rem;
      background: none;
      border: 2px solid $light-color;
    }

    textarea {
      color: $light-color;
      font-family: "Raleway", sans-serif;
      font-weight: 600;
      margin: 0.8rem 1rem;
      height: 8rem;
      background: none;
      border: 2px solid $light-color;
    }

    button {
      margin: 0.8rem 1rem;
    }

    .recap {
      width: 150px;
      height: auto;
    }
  }
}

